1. Метод .of [#310661]